# summary

./: .git-commits.yaml  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
migrations/: 001_initial.py
static/: app.js
summary/: __init__.py  conftest.py  tests.py  views.py
summary/api/: __init__.py  tests.py  youtube.py
summary/config/: __init__.py  tests.py
summary/models/: __init__.py  schemas.py  tests.py  types.py
summary/utils/conftest/fixtures/: caption-data.json  captions.json  message.data
summary/utils/conftest/fixtures/youtube/: captions.json
summary/utils/openai/: __init__.py  tests.py
summary/utils/together_ai/: __init__.py  tests.py
summary/utils/youtube/: __init__.py  tests.py
summary/youtube/: __init__.py  tests.py  utils.py
templates/: html.html  index.html  layout.html
